--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  script(src="https://code.jquery.com/jquery-3.4.1.min.js")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js")
+  script(src="/javascripts/calculatorClient.js")
