--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,17 @@
 body {
   padding: 50px;
+  padding-top: 25px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+.table tr > td {
+  padding: .5rem;
+}
+
+.btn {
+  padding: 5px;
 }
