--- a/views/index.pug
+++ b/views/index.pug
@@ -2,16 +2,18 @@ extends layout
 
 block content
   h1= title
-  div#calculations_input
+  div.container-fluid#calculations
     form#calculations_input_form
-      input(type='text' id="user_input")
-      input(type='submit' id="user_submit" value="Calculate!")
-  div#calculations_output   
-    table#calculations_output_table     
+      div.row.form-group
+        input.col.form-control(type='text' id='user_input')
+        button.col-1.btn.btn-primary(type='submit') Calculate!
+
+    table.table#calculations_output_table
       each calc in cache
-        tr
-          td= calc.calc
-          td= calc.answer
-  script(src="https://code.jquery.com/jquery-3.4.1.min.js")
-  script(src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js")
-  script(src="/javascripts/calculatorClient.js")
+        tr.row
+          td.col= calc.calc
+          td.col-1 =
+          td.col-3= calc.answer
+  script(src='https://code.jquery.com/jquery-3.4.1.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js')
+  script(src='/javascripts/calculatorClient.js')
