--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ block content
   div.container-fluid
     div.row#heading
       img.float-left(img src="https://media.sezzle.com/branding/2.0/Sezzle_Logo_FullColor.svg")
-      h1  Calculator
+      h1#header  Calculator
     div#calculations
       form.row.form-group#calculations_input_form      
         input.col.form-control(type='text' id='user_input')
