--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel="icon" type="image/png" href="https://media.sezzle.com/branding/2.0/favicon/favicon-16x16.png" sizes="16x16")
+    link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Comfortaa")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css')
   body
